# python-rag

./: .gitignore  README.md  open-ai.py  pyproject.toml  rag.py
demo/: chat-prompt.py  embedding-models.py  fewshot-prompt.py  llm-models.py  universal-prompt.py
demo/rag/: doc.md  rag.py
demo/rag/cosine-similarity/: cosine-similarity.py
langchain/: chat-openai-demo.py
